nav bar z-index fixed

--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -15,7 +15,7 @@
     .home-nav {
       width: 100%;
       position: fixed;
-      z-index: 1000;
+      z-index: 1;
       transition: background-color 0.5s ease;
 
       ul li {
